# book_RAG

./: README.md  main.py  pyproject.toml  response.txt  tree_prodject.txt
data/: db_records.txt
src/: apigenia.py
src/app/: apigenia.py  generator.py  keyword.py  keyword_matcher.py  metrics.py  retriever.py  test_temp.py  vector_retriever.py
test/: test_enhancedsimilarity.py  wordnet.py
test_out/: response.txt
